--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <section>
     <div class="smart-vales d-flex justify-content-center align-items-center">
     <div class="smart-wrapper">
-    <h2 class="smart-title pb-5">Our ‘Smart’ Values</h2>
+    <h2 class="smart-title my-5">Our ‘Smart’ Values</h2>
 
     <!-- Row 1 -->
      <div class="row justify-content-center align-items-center row-gap-tight">
@@ -228,7 +228,7 @@
     -------------------------------------------------------------------------------
     -->
    <section class="features-wrapper d-flex justify-content-center align-items-center">
-    <div class="features-title">
+    <div class="features-title pt-5">
       Built for Enterprise.<br/>
       Engineered for Impact.
     </div>
