include insight in main page

--- a/index.html
+++ b/index.html
@@ -319,6 +319,61 @@
       </div>
     </div>
   </section>
+
+  <!-- 
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    AI Means Business Section
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -->
+
+  <section class="insights-section">
+    <h2 class="pt-5">Insights That Power<br class="small-hide"> Action.</h2>
+    <p class="subheading">
+      Stay ahead with expert articles on AI, business automation, and actionable intelligence. 
+      Discover trends, tips, and real-world strategies to drive smarter decisions and better outcomes.
+    </p>
+
+    <div class="cards-container">
+      <!-- Card 1 -->
+      <div class="card">
+        <img src="/asset/insights1.svg" alt="Automation"/>
+        <div class="card-meta">
+          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
+          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> March,17,2025</div>
+        </div>
+        <div class="card-title">How Intelligent Automation is Changing Enterprises</div>
+        <button class="view-button">View</button>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="card">
+        <img src="/asset/insights2.svg" alt="Data Action"/>
+        <div class="card-meta">
+          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
+          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> March,17,2025</div>
+        </div>
+        <div class="card-title">From Data to Action: Why Insights Alone Aren’t Enough</div>
+        <button class="view-button">View</button>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="card">
+        <img src="/asset/insights3.svg" alt="AI Success"/>
+        <div class="card-meta">
+          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
+          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> March,17,2025</div>
+        </div>
+        <div class="card-title">Real-World AI: Success Stories Across Industries</div>
+        <button class="view-button">View</button>
+      </div>
+    </div>
+
+    <button class="read-more-button">Read More</button>
+  </section>
   <!-- 
     -------------------------------------------------------------------------------
     -------------------------------------------------------------------------------
