change in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-xl navbar-custom">
             <div class="container-fluid navbar-content">
                 <a class="navbar-brand" href="#">
-                    <img src="asset/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
+                    <img src="/asset/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
                     <div class="brand-text">
                         <div class="brand-main">aktionable.ai</div>
                         <div class="brand-tagline">Smarter AI. Real Results</div>
@@ -103,7 +103,7 @@
         <div class="video-background">
             <!-- Placeholder for video - replace src with your actual video URL -->
             <video autoplay muted loop playsinline>
-                <source src="asset/video/Welcome.mp4" type="video/mp4">
+                <source src="/asset/video/Welcome.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -171,7 +171,7 @@
      <div class="row justify-content-center align-items-center row-gap-tight">
       <div class="col-auto equal-col">
         <div class="smart-card">
-          <img src="asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
+          <img src="/asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
           <h5>Trust by Design</h5>
           <p>Enterprise-grade security and governance are built into every solution.</p>
         </div>
@@ -179,7 +179,7 @@
       <div class="spacer"></div>
       <div class="col-auto equal-col">
         <div class="smart-card">
-            <img src="asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
+            <img src="/asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
           <h5>Results Over Hype</h5>
           <p>Focus on measurable business outcomes, not just AI buzzwords.</p>
         </div>
@@ -201,7 +201,7 @@
     <div class="row justify-content-center align-items-center row-gap-tight">
       <div class="col-auto equal-col">
         <div class="smart-card">
-           <img src="asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
+           <img src="/asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
           <h5>Modular Extensibility</h5>
           <p>Build what you need, then expand.</p>
         </div>
@@ -209,7 +209,7 @@
       <div class="spacer"></div>
       <div class="col-auto equal-col">
         <div class="smart-card">
-           <img src="asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
+           <img src="/asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
           <h5>Secure Enterprise AI Deployment</h5>
           <p>Deploy AI with confidence and control.</p>
         </div>
@@ -279,7 +279,7 @@
       <div class="hero-content">
         <h1>Explore our Smarter AI <br class="small-hide"> Platform</h1>
         <div class="play-button">
-         <img src="asset/play.svg" alt="Play Button" class="play-icon">
+         <img src="/asset/play.svg" alt="Play Button" class="play-icon">
         </div>
       </div>
     </section>
@@ -319,6 +319,74 @@
       </div>
     </div>
   </section>
+  <!-- 
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    smart solution Section
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -->
+<section class="solutions-wrapper">
+    <div class="solutions-section">
+
+   
+    <h2>Smart Solutions. Real Impact.</h2>
+    <h3>From Finance to Healthcare, Legal to Ops - We Power It All.</h3>
+    <p class="solutions-discription">
+      Whether you’re automating compliance in banking, streamlining claims in healthcare, accelerating legal reviews, or optimizing enterprise workflows — our platform adapts to your domain and delivers real, measurable outcomes.
+    </p>
+
+      <div class="cards-wrapper">
+            <!-- Card 1: Banking & Finance -->
+            <div class="card">
+                <img src="/asset/solutions1.svg" 
+                     alt="Banking and Finance professionals in meeting" class="card-image">
+                <div class="card-content ">
+                    <h4 class="text-center">Banking &<br> Finance</h4>
+                    <p class="mb-5">Automate document processing, fraud detection & compliance with AI-built for financial workflows.</p>
+                    <!-- <button class="arrow-button">↗</button> -->
+                </div>
+                <div class="icon-box">
+                    <div class="arrow-container">
+                        <!-- <img src="/asset/arrow.svg" alt="Arrow" class="arrow-icon"> -->
+                    <img src="/asset/arrow.svg" alt="Arrow" class="arrow-icon">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2: Healthcare & Insurance -->
+            <div class="card">
+                <img src="/asset/solutions2.svg" 
+                     alt="Healthcare professionals consulting" class="card-image">
+                <div class="card-content">
+                    <h4 class="text-center">Healthcare &<br> Insurance</h4>
+                    <p >Accelerate claims, improve patient experiences & reduce errors using healthcare-grade AI.</p>
+                    <!-- <button class="arrow-button">↗</button> -->
+                </div>
+                <div class="icon-box">
+                    <div class="arrow-container">
+                        <!-- <img src="/asset/arrow.svg" alt="Arrow" class="arrow-icon"> -->
+                    <img src="/asset/arrow.svg" alt="Arrow" class="arrow-icon">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <div class="nav-buttons">
+      <button><img src="asset/leftarrow1.svg" alt="Left Arrow" ></button>
+      <button><img src="asset/rightwarrow1.svg" alt="Right Arrow" ></button>
+      
+    </div>
+     </div>
+  </section>
+    
+
+
+
+
+
 
   <!-- 
     -------------------------------------------------------------------------------
@@ -384,7 +452,7 @@
     -------------------------------------------------------------------------------
     -->
 
-    <section class="contact-now-section">
+    <section class="contact-now-section my-3">
     <div class="contact-content">
       <p>
         Ready to transform your enterprise with smarter AI?<br/>
@@ -476,7 +544,7 @@
                             <div class="col-lg-6 d-flex flex-column align-items-lg-start align-items-center">
                                 <div class="logo-section">
                                     <a class="navbar-brand d-flex justify-content-md-start justify-content-center align-items-lg-end align-items-center" href="#">
-                                        <img src="asset/logo_large.svg" alt="Aktionable.ai Logo" class="logo-img">
+                                        <img src="/asset/logo_large.svg" alt="Aktionable.ai Logo" class="logo-img">
                                         <div class="brand-text ">
                                             <div class="brand-main">aktionable.ai</div>
                                             <div class="brand-tagline">Smarter AI. Real Results</div>
@@ -503,16 +571,16 @@
 
                                     <div class="social-links">
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia1.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="/asset/socialmedia1.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia2.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="/asset/socialmedia2.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia3.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="/asset/socialmedia3.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia4.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="/asset/socialmedia4.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                     </div>
                                 </div>
