--- a/blog.html
+++ b/blog.html
@@ -20,13 +20,13 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="css/common.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/blog.css" rel="stylesheet" />
     <!-- <link href="css/generativeai.css" rel="stylesheet" /> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/imagess/owl.carousel.min.css"
         integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <!-- <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/imagess/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-xl navbar-custom">
             <div class="container-fluid navbar-content">
                 <a class="navbar-brand" href="#">
-                    <img src="asset/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
+                    <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
                     <div class="brand-text">
                         <div class="brand-main">aktionable.ai</div>
                         <div class="brand-tagline">Smarter AI. Real Results</div>
@@ -99,34 +99,42 @@
     -------------------------------------------------------------------------------
     -------------------------------------------------------------------------------
     -->
-    <div class="hero-container">
-        <div class="video-background">
-            <!-- Placeholder for video - replace src with your actual video URL -->
-            <video autoplay muted loop playsinline>
-                <source src="asset/video/Welcome.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
-        <div class="video-overlay"></div>
-
-        <div class="content justify-content-center text-start d-flex flex-column">
-            <div class="">
-
-
-                <h1 class="main-title">Smarter AI.</h1>
-                <h1 class="sub-title">Real Results.</h1>
-                <p class="description">
-                    Fast, scalable AI solutions<br>
-                    built for real-world<br>
-                    enterprise impact.
-                </p>
-                <div class="cta-buttons">
-                    <a href="#" class="btn btn-primary">Request a Demo</a>
-                    <a href="#" class="btn btn-primary">Explore Platform</a>
-                </div>
-            </div>
-        </div>
+     <section class="hero-section">
+    <div class="hero-text">
+      <h1>Loremipsum<br>sit amet<br>consectetur</h1>
+      <p>
+        Stay ahead in the AI-driven world with our curated resources.
+        Aktionable AI provides a wealth of knowledge to help you learn, strategize,
+        and make informed decisions about enterprise AI adoption. Explore our latest insights,
+        success stories, and thought leadership.
+      </p>
     </div>
+    <div class="hero-image">
+      <img src="images/blog-main.svg" alt="AI Woman Thinking">
+    </div>
+   </section>
+
+
+ <!-- 
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    Main Section
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -->
+
+   <section class="contact-section">
+    <div class="contact-card">
+      <h2>
+        Looking for something specific or have questions about our insights?
+        Feel free to reach out – we’re happy to point you to the right resource
+        or have a conversation.
+      </h2>
+      <button class="contact-btn">Contact Now</button>
+    </div>
+  </section>
   
 
     <!-- 
@@ -212,7 +220,7 @@
                             <div class="col-lg-6 d-flex flex-column align-items-lg-start align-items-center">
                                 <div class="logo-section">
                                     <a class="navbar-brand d-flex justify-content-md-start justify-content-center align-items-lg-end align-items-center" href="#">
-                                        <img src="asset/logo_large.svg" alt="Aktionable.ai Logo" class="logo-img">
+                                        <img src="images/logo_large.svg" alt="Aktionable.ai Logo" class="logo-img">
                                         <div class="brand-text ">
                                             <div class="brand-main">aktionable.ai</div>
                                             <div class="brand-tagline">Smarter AI. Real Results</div>
@@ -239,16 +247,16 @@
 
                                     <div class="social-links">
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia1.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia1.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia2.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia2.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia3.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia3.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia4.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia4.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                     </div>
                                 </div>
