--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <link href="css/common.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
     <!-- <link href="css/generativeai.css" rel="stylesheet" /> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/imagess/owl.carousel.min.css"
         integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <!-- <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/imagess/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
@@ -37,9 +37,9 @@
         <nav class="navbar navbar-expand-xl navbar-custom">
             <div class="container-fluid navbar-content">
                 <a class="navbar-brand" href="#">
-                    <img src="/asset/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
+                    <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
                     <div class="brand-text">
-                        <div class="brand-main">aktionable.ai</div>
+                        <div class="brand-main">A<div class="kt">kt</div>ionable Ai</div>
                         <div class="brand-tagline">Smarter AI. Real Results</div>
                     </div>
                 </a>
@@ -81,9 +81,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact Us</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="btn-login" href="#">Log In</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -103,7 +103,7 @@
         <div class="video-background">
             <!-- Placeholder for video - replace src with your actual video URL -->
             <video autoplay muted loop playsinline>
-                <source src="/asset/video/Welcome.mp4" type="video/mp4">
+                <source src="images/video/Welcome.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -171,7 +171,7 @@
      <div class="row justify-content-center align-items-center row-gap-tight">
       <div class="col-auto equal-col">
         <div class="smart-card">
-          <img src="/asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
+          <img src="images/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
           <h5>Trust by Design</h5>
           <p>Enterprise-grade security and governance are built into every solution.</p>
         </div>
@@ -179,7 +179,7 @@
       <div class="spacer"></div>
       <div class="col-auto equal-col">
         <div class="smart-card">
-            <img src="/asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
+            <img src="images/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
           <h5>Results Over Hype</h5>
           <p>Focus on measurable business outcomes, not just AI buzzwords.</p>
         </div>
@@ -190,7 +190,7 @@
     <div class="row justify-content-center row-gap-tight">
       <div class="col-auto equal-col">
         <div class="smart-card">
-          <img src="asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
+          <img src="images/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
           <h5>Human-Centric Transformation</h5>
           <p>AI designed to augment people, not replace them.</p>
         </div>
@@ -201,7 +201,7 @@
     <div class="row justify-content-center align-items-center row-gap-tight">
       <div class="col-auto equal-col">
         <div class="smart-card">
-           <img src="/asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
+           <img src="images/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
           <h5>Modular Extensibility</h5>
           <p>Build what you need, then expand.</p>
         </div>
@@ -209,7 +209,7 @@
       <div class="spacer"></div>
       <div class="col-auto equal-col">
         <div class="smart-card">
-           <img src="/asset/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
+           <img src="images/smart_timer1.svg" alt="Smart Icon" class="smart-icon">
           <h5>Secure Enterprise AI Deployment</h5>
           <p>Deploy AI with confidence and control.</p>
         </div>
@@ -235,7 +235,7 @@
 
     <div class="cards-container">
       <div class="feature-card">
-        <img src="/asset/enterprise1.svg" alt="Generative AI Engine" />
+        <img src="images/enterprise1.svg" alt="Generative AI Engine" />
         <h3>Generative AI Engine</h3>
         <p>
           Built on state-of-the-art large language models and AI techniques that can generate, summarize, and analyze content intelligently – all tailored to your enterprise data.
@@ -243,7 +243,7 @@
       </div>
 
       <div class="feature-card">
-        <img src="/asset/enterprise2.svg" alt="Unified Data & Integration" />
+        <img src="images/enterprise2.svg" alt="Unified Data & Integration" />
         <h3>Unified Data &<br/> Integration</h3>
         <p>
           Pre-built connectors and APIs to unify data from your enterprise systems (ERP, CRM, databases, etc.), ensuring AI decisions are based on a complete, single source of truth.
@@ -251,7 +251,7 @@
       </div>
 
       <div class="feature-card">
-        <img src="/asset/enterprise3.svg" alt="Scalable Deployment" />
+        <img src="images/enterprise3.svg" alt="Scalable Deployment" />
         <h3>Scalable & Flexible<br/> Deployment</h3>
         <p>
           Containerized, modular design that runs securely on your cloud or on-premises infrastructure. Scale seamlessly from pilot to full production with robust performance monitoring and management tools.
@@ -275,11 +275,13 @@
     -->
 
 <div class="blur-wrapper">
+  <div class="blur-section"></div>
+  <div class="blur-img"></div>
     <section class="hero-section">
       <div class="hero-content">
         <h1>Explore our Smarter AI <br class="small-hide"> Platform</h1>
         <div class="play-button">
-         <img src="/asset/play.svg" alt="Play Button" class="play-icon">
+         <img src="images/play.svg" alt="Play Button" class="play-icon">
         </div>
       </div>
     </section>
@@ -341,7 +343,7 @@
       <div class="cards-wrapper">
             <!-- Card 1: Banking & Finance -->
             <div class="card">
-                <img src="/asset/solutions1.svg" 
+                <img src="images/solutions1.svg" 
                      alt="Banking and Finance professionals in meeting" class="card-image">
                 <div class="card-content ">
                     <h4 class="text-center">Banking &<br> Finance</h4>
@@ -350,15 +352,15 @@
                 </div>
                 <div class="icon-box">
                     <div class="arrow-container">
-                        <!-- <img src="/asset/arrow.svg" alt="Arrow" class="arrow-icon"> -->
-                    <img src="/asset/arrow.svg" alt="Arrow" class="arrow-icon">
+                        <!-- <img src="/images/arrow.svg" alt="Arrow" class="arrow-icon"> -->
+                    <img src="images/arrow.svg" alt="Arrow" class="arrow-icon">
                     </div>
                 </div>
             </div>
 
             <!-- Card 2: Healthcare & Insurance -->
             <div class="card">
-                <img src="/asset/solutions2.svg" 
+                <img src="images/solutions2.svg" 
                      alt="Healthcare professionals consulting" class="card-image">
                 <div class="card-content">
                     <h4 class="text-center">Healthcare &<br> Insurance</h4>
@@ -367,16 +369,16 @@
                 </div>
                 <div class="icon-box">
                     <div class="arrow-container">
-                        <!-- <img src="/asset/arrow.svg" alt="Arrow" class="arrow-icon"> -->
-                    <img src="/asset/arrow.svg" alt="Arrow" class="arrow-icon">
+                        <!-- <img src="/images/arrow.svg" alt="Arrow" class="arrow-icon"> -->
+                    <img src="images/arrow.svg" alt="Arrow" class="arrow-icon">
                     </div>
                 </div>
             </div>
         </div>
 
     <div class="nav-buttons">
-      <button><img src="asset/leftarrow1.svg" alt="Left Arrow" ></button>
-      <button><img src="asset/rightwarrow1.svg" alt="Right Arrow" ></button>
+      <button><img src="images/leftarrow1.svg" alt="Left Arrow" ></button>
+      <button><img src="images/rightwarrow1.svg" alt="Right Arrow" ></button>
       
     </div>
      </div>
@@ -408,10 +410,10 @@
     <div class="cards-container">
       <!-- Card 1 -->
       <div class="card">
-        <img src="/asset/insights1.svg" alt="Automation"/>
+        <img src="images/insights1.svg" alt="Automation"/>
         <div class="card-meta">
-          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
-          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> March,17,2025</div>
+          <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
+          <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> March,17,2025</div>
         </div>
         <div class="card-title">How Intelligent Automation is Changing Enterprises</div>
         <button class="view-button">View</button>
@@ -419,10 +421,10 @@
 
       <!-- Card 2 -->
       <div class="card">
-        <img src="/asset/insights2.svg" alt="Data Action"/>
+        <img src="images/insights2.svg" alt="Data Action"/>
         <div class="card-meta">
-          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
-          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> March,17,2025</div>
+          <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
+          <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> March,17,2025</div>
         </div>
         <div class="card-title">From Data to Action: Why Insights Alone Aren’t Enough</div>
         <button class="view-button">View</button>
@@ -430,10 +432,10 @@
 
       <!-- Card 3 -->
       <div class="card">
-        <img src="/asset/insights3.svg" alt="AI Success"/>
+        <img src="images/insights3.svg" alt="AI Success"/>
         <div class="card-meta">
-          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
-          <div class="meta-box"><i><img src="/asset/person.svg" alt="LinkedIn"></i> March,17,2025</div>
+          <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
+          <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> March,17,2025</div>
         </div>
         <div class="card-title">Real-World AI: Success Stories Across Industries</div>
         <button class="view-button">View</button>
@@ -544,9 +546,9 @@
                             <div class="col-lg-6 d-flex flex-column align-items-lg-start align-items-center">
                                 <div class="logo-section">
                                     <a class="navbar-brand d-flex justify-content-md-start justify-content-center align-items-lg-end align-items-center" href="#">
-                                        <img src="/asset/logo_large.svg" alt="Aktionable.ai Logo" class="logo-img">
+                                        <img src="images/logo-large.png" alt="Aktionable.ai Logo" class="logo-img">
                                         <div class="brand-text ">
-                                            <div class="brand-main">aktionable.ai</div>
+                                            <div class="brand-main">Aktionable Ai</div>
                                             <div class="brand-tagline">Smarter AI. Real Results</div>
                                         </div>
                                     </a>
@@ -571,16 +573,16 @@
 
                                     <div class="social-links">
                                         <a href="#" class="social-link">
-                                            <img src="/asset/socialmedia1.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia1.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="/asset/socialmedia2.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia2.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="/asset/socialmedia3.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia3.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="/asset/socialmedia4.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia4.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                     </div>
                                 </div>
@@ -592,7 +594,7 @@
                     <div class="row small-container">
                         <div class="col-12 ">
                             <div class="copyright text-lg-start text-center">
-                                2025 aktionable.ai. A KT2i (Kanchi Technologies) Company | All Rights Reserved.
+                                2025 Aktionable Ai. A KT2i (Kanchi Technologies) Company | All Rights Reserved.
                             </div>
                         </div>
                     </div>
