--- a/blog.html
+++ b/blog.html
@@ -119,7 +119,7 @@
     -------------------------------------------------------------------------------
     -------------------------------------------------------------------------------
     -------------------------------------------------------------------------------
-    Main Section
+    contact Section
     -------------------------------------------------------------------------------
     -------------------------------------------------------------------------------
     -------------------------------------------------------------------------------
