--- a/contact-us.html
+++ b/contact-us.html
@@ -20,7 +20,7 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="css/common.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/contact_us.css" rel="stylesheet" />
     <!-- <link href="css/generativeai.css" rel="stylesheet" /> -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
         integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-xl navbar-custom">
             <div class="container-fluid navbar-content">
                 <a class="navbar-brand" href="#">
-                    <img src="asset/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
+                    <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
                     <div class="brand-text">
                         <div class="brand-main">aktionable.ai</div>
                         <div class="brand-tagline">Smarter AI. Real Results</div>
@@ -99,34 +99,61 @@
     -------------------------------------------------------------------------------
     -------------------------------------------------------------------------------
     -->
-    <div class="hero-container">
-        <div class="video-background">
-            <!-- Placeholder for video - replace src with your actual video URL -->
-            <video autoplay muted loop playsinline>
-                <source src="asset/video/Welcome.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
-        <div class="video-overlay"></div>
-
-        <div class="content justify-content-center text-start d-flex flex-column">
-            <div class="">
-
-
-                <h1 class="main-title">Smarter AI.</h1>
-                <h1 class="sub-title">Real Results.</h1>
-                <p class="description">
-                    Fast, scalable AI solutions<br>
-                    built for real-world<br>
-                    enterprise impact.
-                </p>
-                <div class="cta-buttons">
-                    <a href="#" class="btn btn-primary">Request a Demo</a>
-                    <a href="#" class="btn btn-primary">Explore Platform</a>
-                </div>
-            </div>
-        </div>
+    <div class="contact-us-containers ">
+    <div class="container">
+    <div class="contact-header text-center">
+      <h1>Get in Touch <span>With Us</span></h1>
+      <p>We’re here to help you explore how actionable insights, smart automation, and real-world AI solutions can transform your operations.</p>
     </div>
+
+    <div class="form-container">
+      <form>
+        <div class="row g-3">
+          <div class="col-md-6">
+            <label class="form-label">Your name*</label>
+            <input type="text" class="form-control" placeholder="Julia William" required>
+          </div>
+          <div class="col-md-6">
+            <label class="form-label">Contact email*</label>
+            <input type="email" class="form-control" placeholder="you@example.com" required>
+          </div>
+
+          <div class="col-md-6">
+            <label class="form-label">Industries*</label>
+            <select class="form-select" required>
+              <option selected disabled>Company name</option>
+              <option>Finance</option>
+              <option>Healthcare</option>
+              <option>Retail</option>
+            </select>
+          </div>
+
+          <div class="col-md-3">
+            <label class="form-label">Phone</label>
+            <select class="form-select">
+              <option>India</option>
+              <option>USA</option>
+              <option>UK</option>
+            </select>
+          </div>
+          <div class="col-md-3">
+            <label class="form-label">&nbsp;</label>
+            <input type="text" class="form-control" placeholder="+91-9876543210">
+          </div>
+
+          <div class="col-12">
+            <label class="form-label">Your message*</label>
+            <textarea class="form-control" rows="4" placeholder="Type your message...." required></textarea>
+          </div>
+
+          <div class="col-12 text-center mt-3">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
     <!-- 
     -------------------------------------------------------------------------------
     -------------------------------------------------------------------------------
@@ -136,7 +163,7 @@
     -------------------------------------------------------------------------------
     -------------------------------------------------------------------------------
     -->
-    <div class="footer">
+       <div class="footer">
         <footer class="footer-section">
             <div class="curved-overlay"></div>
             <div class="content-wrapper">
@@ -209,8 +236,9 @@
                         <div class="row">
                             <div class="col-lg-6 d-flex flex-column align-items-lg-start align-items-center">
                                 <div class="logo-section">
-                                    <a class="navbar-brand d-flex justify-content-md-start justify-content-center align-items-lg-end align-items-center" href="#">
-                                        <img src="asset/logo_large.svg" alt="Aktionable.ai Logo" class="logo-img">
+                                    <a class="navbar-brand d-flex justify-content-md-start justify-content-center align-items-lg-end align-items-center"
+                                        href="#">
+                                        <img src="images/logo_large.svg" alt="Aktionable.ai Logo" class="logo-img">
                                         <div class="brand-text ">
                                             <div class="brand-main">aktionable.ai</div>
                                             <div class="brand-tagline">Smarter AI. Real Results</div>
@@ -237,16 +265,16 @@
 
                                     <div class="social-links">
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia1.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia1.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia2.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia2.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia3.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia3.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="asset/socialmedia4.svg" alt="LinkedIn" class="social-icon">
+                                            <img src="images/socialmedia4.svg" alt="LinkedIn" class="social-icon">
                                         </a>
                                     </div>
                                 </div>
