--- a/contact-us.html
+++ b/contact-us.html
@@ -100,60 +100,169 @@
     -------------------------------------------------------------------------------
     -->
     <div class="contact-us-containers ">
-    <div class="container">
-    <div class="contact-header text-center">
-      <h1>Get in Touch <span>With Us</span></h1>
-      <p>We’re here to help you explore how actionable insights, smart automation, and real-world AI solutions can transform your operations.</p>
-    </div>
+        <div class="container">
+            <div class="contact-header text-center">
+                <h1>Get in Touch <span>With Us</span></h1>
+                <p>We’re here to help you explore how actionable insights, smart automation, and real-world AI solutions
+                    can transform your operations.</p>
+            </div>
 
-    <div class="form-container">
-      <form>
-        <div class="row g-3">
-          <div class="col-md-6">
-            <label class="form-label">Your name*</label>
-            <input type="text" class="form-control" placeholder="Julia William" required>
-          </div>
-          <div class="col-md-6">
-            <label class="form-label">Contact email*</label>
-            <input type="email" class="form-control" placeholder="you@example.com" required>
-          </div>
+            <div class="form-container">
+                <form>
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <label class="form-label">Your name*</label>
+                            <input type="text" class="form-control" placeholder="Julia William" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label class="form-label">Contact email*</label>
+                            <input type="email" class="form-control" placeholder="you@example.com" required>
+                        </div>
 
-          <div class="col-md-6">
-            <label class="form-label">Industries*</label>
-            <select class="form-select" required>
-              <option selected disabled>Company name</option>
-              <option>Finance</option>
-              <option>Healthcare</option>
-              <option>Retail</option>
-            </select>
-          </div>
+                        <div class="col-md-6">
+                            <label class="form-label">Industries*</label>
+                            <select class="form-select" required>
+                                <option selected disabled>Company name</option>
+                                <option>Finance</option>
+                                <option>Healthcare</option>
+                                <option>Retail</option>
+                            </select>
+                        </div>
 
-          <div class="col-md-3">
-            <label class="form-label">Phone</label>
-            <select class="form-select">
-              <option>India</option>
-              <option>USA</option>
-              <option>UK</option>
-            </select>
-          </div>
-          <div class="col-md-3">
-            <label class="form-label">&nbsp;</label>
-            <input type="text" class="form-control" placeholder="+91-9876543210">
-          </div>
+                        <div class="col-md-3">
+                            <label class="form-label">Phone</label>
+                            <select class="form-select">
+                                <option>India</option>
+                                <option>USA</option>
+                                <option>UK</option>
+                            </select>
+                        </div>
+                        <div class="col-md-3">
+                            <label class="form-label">&nbsp;</label>
+                            <input type="text" class="form-control" placeholder="+91-9876543210">
+                        </div>
 
-          <div class="col-12">
-            <label class="form-label">Your message*</label>
-            <textarea class="form-control" rows="4" placeholder="Type your message...." required></textarea>
-          </div>
+                        <div class="col-12">
+                            <label class="form-label">Your message*</label>
+                            <textarea class="form-control" rows="4" placeholder="Type your message...."
+                                required></textarea>
+                        </div>
 
-          <div class="col-12 text-center mt-3">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
+                        <div class="col-12 text-center mt-3">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-      </form>
     </div>
-  </div>
-</div>
+
+
+    <!-- 
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    location Section
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -->
+    <div class="location-wrapper">
+        <div class="location-container">
+            <div class="contact-block">
+                <div>
+                    <div class="contact-bw">
+                        <img src="images/email.svg" alt="Email Icon" />
+                    </div>
+                </div>
+
+                <h3>Email us</h3>
+                <p><a href="mailto:hello@KT2I.com">hello@KT2I.com</a></p>
+            </div>
+
+            <div class="contact-block">
+                <div class="contact-bw">
+                    <img src="images/phone.svg" alt="Phone Icon" />
+                </div>
+                <h3>Call us</h3>
+                <p><a href="tel:+19494145420">+1 9494145420</a></p>
+            </div>
+
+            <div class="contact-block location">
+                <div class="contact-bw">
+                    <img src="images/location.svg" alt="Location Icon" />
+                </div>
+                <h3>Location</h3>
+                <p><strong>USA:</strong> Irvine, CA & Austin, TX</p>
+                <p><strong>EU:</strong> Stuttgart, Germany</p>
+                <p><strong>India:</strong> Bangalore, Hyderabad & Tirupathi</p>
+            </div>
+        </div>
+    </div>
+    <!-- 
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    Image Section
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -->
+    <div class="image-container">
+        <div class="image-wrapper">
+            <img src="images/map.png" alt="map" />
+        </div>
+    </div>
+    <!-- 
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    faq Section
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -->
+    <section class="faq-section ">
+        <h2 class="faq-header">Frequently Asked Questions (FAQs)</h2>
+
+        <!-- Static FAQ Boxes -->
+        <div class="faq-box">
+            <span>Q: What is Aktionable.ai’s platform, and how is it different from other AI solutions?</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
+                    <path d="M28 15H15M15 15H2M15 15V2M15 15V28" stroke="white" stroke-width="2.5"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                </svg></i>
+        </div>
+        <div class="faq-box">
+            <span>Q: What is Aktionable.ai’s platform, and how is it different from other AI solutions?</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
+                    <path d="M28 15H15M15 15H2M15 15V2M15 15V28" stroke="white" stroke-width="2.5"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                </svg></i>
+        </div>
+        <div class="faq-box">
+            <span>Q: What is Aktionable.ai’s platform, and how is it different from other AI solutions?</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
+                    <path d="M28 15H15M15 15H2M15 15V2M15 15V28" stroke="white" stroke-width="2.5"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                </svg></i>
+        </div>
+        <div class="faq-box">
+            <span>Q: What is Aktionable.ai’s platform, and how is it different from other AI solutions?</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
+                    <path d="M28 15H15M15 15H2M15 15V2M15 15V28" stroke="white" stroke-width="2.5"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                </svg></i>
+        </div>
+        <div class="faq-box">
+            <span>Q: What is Aktionable.ai’s platform, and how is it different from other AI solutions?</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
+                    <path d="M28 15H15M15 15H2M15 15V2M15 15V28" stroke="white" stroke-width="2.5"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                </svg></i>
+        </div>
+    </section>
+
     <!-- 
     -------------------------------------------------------------------------------
     -------------------------------------------------------------------------------
@@ -163,7 +272,7 @@
     -------------------------------------------------------------------------------
     -------------------------------------------------------------------------------
     -->
-       <div class="footer">
+    <div class="footer">
         <footer class="footer-section">
             <div class="curved-overlay"></div>
             <div class="content-wrapper">
