complete contact us

--- a/contact-us.html
+++ b/contact-us.html
@@ -102,14 +102,14 @@
     <div class="contact-us-containers ">
         <div class="container">
             <div class="contact-header text-center">
-                <h1>Get in Touch <span>With Us</span></h1>
+                <h1 class="pb-3 ">Get in Touch <span>With Us</span></h1>
                 <p>We’re here to help you explore how actionable insights, smart automation, and real-world AI solutions
                     can transform your operations.</p>
             </div>
 
             <div class="form-container">
                 <form>
-                    <div class="row g-3">
+                    <div class="row g-3 p-lg-3">
                         <div class="col-md-6">
                             <label class="form-label">Your name*</label>
                             <input type="text" class="form-control" placeholder="Julia William" required>
@@ -129,7 +129,7 @@
                             </select>
                         </div>
 
-                        <div class="col-md-3">
+                        <div class="col-md-2">
                             <label class="form-label">Phone</label>
                             <select class="form-select">
                                 <option>India</option>
@@ -137,23 +137,32 @@
                                 <option>UK</option>
                             </select>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <label class="form-label">&nbsp;</label>
                             <input type="text" class="form-control" placeholder="+91-9876543210">
                         </div>
 
                         <div class="col-12">
                             <label class="form-label">Your message*</label>
-                            <textarea class="form-control" rows="4" placeholder="Type your message...."
+                            <textarea class="form-control text-form" rows="7" placeholder="Type your message...."
                                 required></textarea>
                         </div>
 
-                        <div class="col-12 text-center mt-3">
+                        <div class="col-12 text-center my-4">
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
                     </div>
                 </form>
             </div>
+        </div>
+        <div class="btm-img">
+            <img src="images/contactbtm.svg" alt="btm_img">
+        </div>
+        <div class="left-img">
+            <img src="images/left-person.png" alt="left-img">
+        </div>
+        <div class="right-img">
+            <img src="images/right-person.png" alt="right-img">
         </div>
     </div>
 
