--- a/service.html
+++ b/service.html
@@ -293,7 +293,7 @@
                 <section class="contact-section">
                     <div class="contact-card">
                         <h2>
-                            Stay ahead and stay secure. Post-deployment, we offer ongoing support services – from monitoring system performance to updating AI models as your data evolves. We also conduct periodic AI audits (accuracy, bias, security checks) to ensure your solution continues to meet compliance and performance standards. With our team as your partner, you can scale your AI usage confidently, knowing expert help is a call away.
+                           Our team doesn’t just understand AI – we understand enterprise change. With experience across industries and a commitment to results over hype, we ensure every project has clear success metrics. We embed trust and transparency into our work, so stakeholders at every level feel confident with the new AI solutions. And as pioneers in generative AI implementation, we bring proven best practices to guide you around common pitfalls and towards quick wins.
                         </h2>
                         <!-- <button class="contact-btn">Contact Now</button> -->
                     </div>
